--- a/resources/frontend/index/ThemeProvider.module.scss
+++ b/resources/frontend/index/ThemeProvider.module.scss
@@ -19,4 +19,14 @@
 	colors_sLight: $colors_sLight;
 	colors_sDark: $colors_sDark;
 	colors_sText: $colors_sText;
+
+	colors_dmode_primary: $colors_dmode_primary;
+	colors_dmode_pLight: $colors_dmode_pLight;
+	colors_dmode_pDark: $colors_dmode_pDark;
+	colors_dmode_pText: $colors_dmode_pText;
+
+	colors_dmode_secondary: $colors_dmode_secondary;
+	colors_dmode_sLight: $colors_dmode_sLight;
+	colors_dmode_sDark: $colors_dmode_sDark;
+	colors_dmode_sText: $colors_dmode_sText;
 }
